--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: go
 go:
   - 1.6.2
+sudo: required
+dist: trusty
+env:
+  - LIBVIRT_VERSION=1.2.2-0ubuntu13.1.11~ppa1
 before_install:
   - go get github.com/golang/lint/golint
 before_script:
@@ -11,3 +15,7 @@ script:
   - ./scripts/golint.sh
   - go vet ./...
   - go test -v ./...
+  - sudo add-apt-repository -y ppa:serge-hallyn/virt
+  - sudo apt-get update
+  - sudo apt-get install -y libvirt0=$LIBVIRT_VERSION libvirt-bin=$LIBVIRT_VERSION qemu-kvm=2.0.0+dfsg-2ubuntu1.11~ppa1
+  - sudo virsh version
